--- a/style/style.css
+++ b/style/style.css
@@ -118,6 +118,12 @@ nav ul li {
   transform: translateY(100%);
 }
 
+@media only screen and (max-width: 1150px) {
+  #name {
+    font-size: 40px;
+  }
+}
+
 @media only screen and (max-width: 980px) {
   input[type=checkbox] {position: absolute; top: -9999px; left: -9999px; background:none;}
   input[type=checkbox]:fous{background:none;}
@@ -127,4 +133,31 @@ nav ul li {
   nav{display:none; position:absolute; right:0px; top:53px; background-color:#c2e1ef; padding:0px; z-index:99;}
   nav ul{width:auto;}
   nav ul li{float:none; padding:10px; width:100%; display:table; border-bottom: 1px solid #000;}
+
+  #name {
+    font-size: 30px;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+
+  #name-wrapper {
+    width: 70%;
+  }
+  
+  #name {
+    font-size: 30px;
+  }
+
+  .left-art {
+    float: none;
+    width: 100%;
+  }
+
+  .right-art {
+    float: none;
+    width: 100%;
+    border-width: 0px 2px 2px 2px;
+  }
+
 }
