--- a/style/style.css
+++ b/style/style.css
@@ -19,7 +19,7 @@ header {
   margin-bottom: 30px;
 }
 
-.clear-fix {
+.clearfix {
   clear: both;
 }
 
@@ -28,7 +28,7 @@ header {
 .toggle-menu ul li{width:100%; height:3px; background-color:#002e5b; margin-bottom:4px;}
 .toggle-menu ul li:last-child{margin-bottom:0px;}
 
-input[type=checkbox], label{display:none;}
+input[type=checkbox], .toggle-menu{display:none;}
 
 .main-head {
   background-image: url("./header-img.jpg");
@@ -94,6 +94,10 @@ input[type=checkbox], label{display:none;}
   margin-bottom: 50px;
 }
 
+.contact-art {
+  margin-bottom: 50px;
+}
+
 .bold {
   font-weight: bold;
 }
@@ -122,6 +126,46 @@ input[type=checkbox], label{display:none;}
   top: 50%;
   /* left: 0%; */
   transform: translateY(-50%);
+}
+
+.form-element {
+  margin: 15px 0px;
+}
+
+.form-element label {
+  display: inline-block;
+  width: 10%;
+  float: left;
+  padding: 15px 0px;
+  font-weight: bold;
+}
+
+.form-element input {
+  width: 35%;
+  float: left;
+  border: 3px solid #000;
+  border-radius: 10px;
+  padding: 15px;
+  background-color: #c2e1ef;
+  font-size: 20px;
+}
+
+.even {
+  margin-left: 40px;
+}
+
+.button {
+  width: 10%;
+  margin: auto;
+  padding: 20px 0px;
+}
+
+input[type=button] {
+  font-size: 1.5em;
+  padding: 15px 25px;
+  border: 2px solid #000;
+  border-radius: 15px;
+  background-color: #00b33c;
 }
 
 nav {
@@ -163,8 +207,6 @@ a:hover {
   max-width: 200px;
 }
 
-
-
 @media only screen and (max-width: 1150px) {
   .name {
     font-size: 40px;
@@ -174,7 +216,7 @@ a:hover {
 @media only screen and (max-width: 980px) {
   input[type=checkbox] {position: absolute; top: -9999px; left: -9999px; background:none;}
   input[type=checkbox]:fous{background:none;}
-  label {float:right; padding:38px 0px; display:inline-block; cursor:pointer; }
+  .toggle-menu {float:right; padding:38px 0px; display:inline-block; cursor:pointer; }
   input[type=checkbox]:checked ~ nav {display:block;}
 
   nav{display:none; position:absolute; right:0px; top:65px; background-color:#c2e1ef; padding:0px; z-index:99;}
@@ -187,6 +229,32 @@ a:hover {
 
   .name {
     font-size: 30px;
+  }
+
+  .form-element label {
+    display: inline-block;
+    width: 30%;
+    /* float: none; */
+    padding: 15px 0px;
+    font-weight: bold;
+  }
+  
+  .form-element input {
+    width: 70%;
+    /* float: none; */
+    border: 3px solid #000;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: #c2e1ef;
+    font-size: 20px;
+  }
+
+  .even {
+    margin-left: 0px;
+  }
+
+  .small-clearfix {
+    clear: both;
   }
 }
 
