--- a/style/style.css
+++ b/style/style.css
@@ -166,6 +166,13 @@ input[type=button] {
   border: 2px solid #000;
   border-radius: 15px;
   background-color: #00b33c;
+  box-shadow: 0px 5px 0px 0px #003311;
+}
+
+input[type=button]:active {
+  background-color: #00b33c;
+  box-shadow: 0px 2px 0px 0px #003311;
+  transform: translateY(3px);
 }
 
 nav {
